fix: perfecting app dark mode

--- a/style.css
+++ b/style.css
@@ -24,3 +24,8 @@ button {
   background: #111;
   color: white;
 }
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.6;
+}
